--- a/templates/quizTake.html
+++ b/templates/quizTake.html
@@ -8,20 +8,22 @@
 </head>
 <body>
     <div class = "title">
-       Insert Quiz Title Here
+        {{ title }}
     </div>
+
+    <br><br>
     
+    {% for q in range(0, num) %} 
     <div class = "questionFull">
         <div id = "questionHeader">
-            Question: placeHolder  
-        </div> 
-        <input type="radio" name="options" id="option1" value="option1"> Option 1 </input> <br>
-        <input type="radio" name="options" id="option2" value="option2"> Option 2 </input> <br>
-        <input type="radio" name="options" id="option3" value="option3"> Option 3 </input> <br>
-        <input type="radio" name="options" id="option4" value="option4"> Option 4 </input> <br>
-            <br>
+            {{ questions[q] }}
+        </div>
+        {% for option in options[q] %} 
+        <input type="radio" name="options" id="option1" value="option1"> {{ option }} </input>
+        {%endfor%}
+        <br><br>
     </div>
-    
+    {%endfor%}
     
     <br><br>
     <button type="button" id = "submit" onclick="window.location.href='quizResults.html';">Submit Answers</button>
