flask quiz take updated

--- a/templates/quizResults.html
+++ b/templates/quizResults.html
@@ -8,17 +8,14 @@
 </head>
 <body>
     <div class = "title">
-        {{Title of Quiz}} Quiz Results
+        {{title}} Quiz Results
      </div>
 
      <div class = "header">
          Based on your quiz answers, you are most like:
      </div>
-     <div class = "img">
-        <img src=".jpg" alt="Insert image here.">
-     </div>
      <div class = "character">
-         {{charName}}!
+         {{charArray}}!
      </div>
 
      <div class = "buttons">
