fixed almost everything

--- a/templates/quizResults.html
+++ b/templates/quizResults.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class = "title">
-        {{title}} Quiz Results
+        Quiz Results
      </div>
 
      <div class = "header">
          Based on your quiz answers, you are most like:
      </div>
      <div class = "character">
-         {{charArray}}!
+         {{character}}!
      </div>
 
      <div class = "buttons">
@@ -23,6 +23,5 @@
                     
      <button type="button" id = "create" onclick="window.location.href='question_form.html';"> Create Your Own!</button>
     </div>
-    <script src="../js/quizResults.js"></script>
 </body>
 </html>
