added quizlist and can play quiz now

--- a/templates/question_form.html
+++ b/templates/question_form.html
@@ -53,8 +53,8 @@
                                 <input class="form-control" name="optionD" id="answerD" value="" placeholder="Mangos">
                             </div>
                             <!---->
-                            <button type="submit" name="submit_btn" value="nxt" class="btn btn-default" onclick="window.location.href='question_form.html';">Next Question</button>
-                            <button type="submit" name="submit_btn" value="done" class="btn btn-default" onclick="window.location.href='homePage.html';">Submit & Complete</button>
+                            <button type="submit" name="submit_btn" value="nxt" class="btn btn-default">Next Question</button>
+                            <button type="submit" name="submit_btn" value="done" class="btn btn-default">Submit & Complete</button>
                         </div>
                     </form>
                     <!--End of Prompts-->
