--- a/templates/quizList.html
+++ b/templates/quizList.html
@@ -32,7 +32,7 @@
           <td>{{i+1}}</td>
           <td>
             <form method="post">
-                <button type="submit" name="index" value={{i+1}} class="btn btn-default" onclick="window.location.href='quizTake.html';">{{quizzes[i]}}</button>
+                <button type="submit" name="index" value={{i+1}} class="btn btn-default">{{quizzes[i]}}</button>
             </form>
           </td>
         </tr>
