--- a/templates/quizTake.html
+++ b/templates/quizTake.html
@@ -30,10 +30,10 @@
             <br><br>
         </div>
         {%endfor%}
-        
+
         <br><br>
 
-        <button type="button" id = "submit" onclick="window.location.href='quizResults.html';">Submit Answers</button>
+        <button type="submit" id ="submit">Submit Answers</button>
     </form>
 </body>
 </html>
