--- a/templates/quiz_form.html
+++ b/templates/quiz_form.html
@@ -48,7 +48,7 @@
                                 <input class="form-control" name="charD" id="answerD" value="" placeholder="Bird">
                             </div>
     
-                            <button type="submit" class="btn btn-default" onclick="window.location.href='question_form.html';">Submit</button>
+                            <button type="submit" class="btn btn-default">Submit</button>
                         </div>
                     </form>
                 </div>
