--- a/templates/quizResults.html
+++ b/templates/quizResults.html
@@ -19,8 +19,7 @@
      </div>
 
      <div class = "buttons">
-     <button type="button" id = "take" onclick="window.location.href='https://youtube.com';"> Take Another Quiz?</button>
-                    
+     <button type="button" id = "take" onclick="window.location.href='quizList.html';"> Take Another Quiz?</button>                    
      <button type="button" id = "create" onclick="window.location.href='question_form.html';"> Create Your Own!</button>
     </div>
 </body>
