--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Maker Homepage</title>
-    <link rel="stylesheet" href="../static/styles/mainStyle.css">
+    <link rel="stylesheet" href="../static/styles/homeStyles.css">
 </head>
 
 <body>
@@ -13,25 +13,44 @@
     </div>
     <div class="row">
         <div class="column">
-            <img src="../static/images/temp.jpg" alt="create" width = 400px>
+            <img src="../static/images/create.png" alt="create" width = 350px height = 400px>
             <br> <br>
-            sample text
+            Creating your own Quiz Instructions:
+            <br>
+            Provide:
+            <br>
+            4 Characters and as many questions as necessary
+            <br>
+             4 Answers per question (Correlating to each character, in order)
         </div>
-        <div class="column">
-            <img src="../static/images/temp.jpg" alt="publish" width = 400px>
+        <div class="column" >
+            <img src="../static/images/temp.jpg" alt="publish" width = 350px height = 400px>
             <br> <br>
-            sample text
+
+            Publish your quiz to our public website for other users to enjoy.<br>
+            You will be redirected to our public quiz list upon completion, <br>
+            feel free to view other users' quizzes!
+            <br><br>
         </div>
-        <div class="column">
-            <img src="../static/images/temp.jpg" alt="take" width = 400px>
+        <div class="column" id = "c1">
+            <img src="../static/images/temp.jpg" alt="take" width = 350px height = 400px>
             <br> <br>
-            sample text
+            Take other people's quizzes to determine which character in the <br> given quiz
+            matches your personality the best!
+            <br><br><br>
         </div>
       </div>
-      <div class = "start" >
+<div class = "row">
+      <div class = "column2" >
           Create Your Own Character Quiz Now!
           <br> <br>
           <button onclick="location.href='quiz_form.html'" type="button">Get Started</button>
       </div>
+      <div class = "column2" >
+        Go to Quiz list Forum
+        <br> <br>
+        <button onclick="location.href='quiz_form.html'" type="button">Quizzes</button>
+        </div>
+</dziv>  
 </body>
 </html>
