--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -4,39 +4,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Maker Homepage</title>
-    <link rel="stylesheet" href="../static/styles/homeStyles.css">
+    <link rel="stylesheet" href="../static/styles/mainStyle.css">
 </head>
 
 <body>
     <div class = "title">
-        Welcome To Character Quiz Maker!
+        Welcome To WhozDat!
     </div>
     <div class="row">
         <div class="column">
             <img src="../static/images/create.png" alt="create" width = 350px height = 400px>
-            <br> <br>
-            Creating your own Quiz Instructions:
-            <br>
-            Provide:
-            <br>
-            4 Characters and as many questions as necessary
-            <br>
-             4 Answers per question (Correlating to each character, in order)
+            
+            <br><br>
+
+            <p>
+                <br>
+                Creating your own Quiz Instructions: <br>
+                Provide: <br>
+                4 Characters and as many questions as necessary <br>
+                4 Answers per question (Correlating to each character, in order)
+            </p>
+            
         </div>
         <div class="column" >
             <img src="../static/images/temp.jpg" alt="publish" width = 350px height = 400px>
-            <br> <br>
-
-            Publish your quiz to our public website for other users to enjoy.<br>
-            You will be redirected to our public quiz list upon completion, <br>
-            feel free to view other users' quizzes!
+            
             <br><br>
+
+            <p>
+                <br>
+                Publish your quiz to our public website for other users to enjoy.<br>
+                You will be redirected to our public quiz list upon completion, <br>
+                feel free to view other users' quizzes!
+            </p>
+
+            <br><br>
+            
         </div>
         <div class="column" id = "c1">
             <img src="../static/images/temp.jpg" alt="take" width = 350px height = 400px>
             <br> <br>
-            Take other people's quizzes to determine which character in the <br> given quiz
-            matches your personality the best!
+
+            <p>
+                <br><br>
+                Take other people's quizzes to determine which character in the <br> given quiz
+                matches your personality the best!
+            </p>
+            
             <br><br><br>
         </div>
       </div>
@@ -49,7 +63,7 @@
       <div class = "column2" >
         Go to Quiz list Forum
         <br> <br>
-        <button onclick="location.href='quiz_form.html'" type="button">Quizzes</button>
+        <button onclick="location.href='quizList.html'" type="button">Quizzes</button>
         </div>
 </dziv>  
 </body>
