--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -19,9 +19,10 @@
 
             <p>
                 <br>
-                Creating your own Quiz Instructions: <br>
+                Creating your own Quiz Instructions: <br><br>
                 Provide: <br>
-                4 Characters and as many questions as necessary <br>
+                4 Characters <br>
+                As many questions <br> 
                 4 Answers per question (Correlating to each character, in order)
             </p>
             
@@ -32,9 +33,9 @@
             <br><br>
 
             <p>
-                <br>
-                Publish your quiz to our public website for other users to enjoy.<br>
-                You will be redirected to our public quiz list upon completion, <br>
+                <br><br>
+                Publish your quiz to our public website for other users to enjoy.
+                You will be redirected to our public quiz list upon completion,
                 feel free to view other users' quizzes!
             </p>
 
@@ -47,7 +48,7 @@
 
             <p>
                 <br><br>
-                Take other people's quizzes to determine which character in the <br> given quiz
+                Take other people's quizzes to determine which character in the given quiz
                 matches your personality the best!
             </p>
             
@@ -61,7 +62,7 @@
           <button onclick="location.href='quiz_form.html'" type="button">Get Started</button>
       </div>
       <div class = "column2" >
-        Go to Quiz list Forum
+        Take a Quiz Now!
         <br> <br>
         <button onclick="location.href='quizList.html'" type="button">Quizzes</button>
         </div>
