--- a/templates/quizResults.html
+++ b/templates/quizResults.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/styles/quizResults.css">
     <link rel="stylesheet" href="../static/styles/mainStyle.css">
-    <title>Document</title>
+    <title>Quiz Results</title>
 </head>
 <body>
     <div class = "title">
@@ -19,9 +18,11 @@
          {{character}}!
      </div>
 
-     <div class = "buttons">
-     <button type="button" id = "take" onclick="window.location.href='quizList.html';"> Take Another Quiz?</button>                    
-     <button type="button" id = "create" onclick="window.location.href='question_form.html';"> Create Your Own!</button>
+     <div class = "column2">
+        <button type="button" id = "take" onclick="window.location.href='quizList.html';"> Take Another Quiz?</button>
+     </div>
+     <div class = "column2">                  
+        <button type="button" id = "create" onclick="window.location.href='question_form.html';"> Create Your Own!</button>
     </div>
 </body>
 </html>
