--- a/templates/quiz_form.html
+++ b/templates/quiz_form.html
@@ -3,13 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Personality Quiz Form</title>
+    <title>Character Quiz Form</title>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
         integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="../static/styles/mainStyle.css">
+    <link rel="stylesheet" href="../static/styles/mainStyle.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
                 <div class="panel panel-primary">
                     <form method="POST">
                         <div class="panel-heading">
-                            <h1 class="panel-title">Question Form</h1>
+                            <h1 class="panel-title">Quiz Form</h1>
                         </div>
                         <div class="panel-body">
                             <!--Prompt to add quiz name-->
@@ -49,7 +49,7 @@
                                 <input class="form-control" name="charD" id="answerD" value="" placeholder="Bird">
                             </div>
     
-                            <button type="submit" class="btn btn-default">Submit</button>
+                            <button type="submit" class="btn btn-default">Next</button>
                         </div>
                     </form>
                 </div>
