--- a/templates/homePage.html
+++ b/templates/homePage.html
@@ -13,7 +13,7 @@
     </div>
     <div class="row">
         <div class="column">
-            <img src="../static/images/create.png" alt="create" width = 350px height = 400px>
+            <img src="../static/images/quiz_create.png" alt="create" width = 350px height = 400px>
             
             <br><br>
 
@@ -28,7 +28,7 @@
             
         </div>
         <div class="column" >
-            <img src="../static/images/temp.jpg" alt="publish" width = 350px height = 400px>
+            <img src="../static/images/quiz_list.PNG" alt="publish" width = 350px height = 400px>
             
             <br><br>
 
@@ -43,7 +43,7 @@
             
         </div>
         <div class="column" id = "c1">
-            <img src="../static/images/temp.jpg" alt="take" width = 350px height = 400px>
+            <img src="../static/images/quiz_take.PNG" alt="take" width = 350px height = 400px>
             <br> <br>
 
             <p>
